content/static/css/style.css
body {
  padding-bottom: 30px;
}

.navbar-inverse .navbar-inner,
.navbar-inverse .nav > li.dropdown.open>.dropdown-toggle, .navbar-inverse .nav li.dropdown.active>.dropdown-toggle,
.navbar-inverse .nav > li.dropdown.open.active>.dropdown-toggle,
.navbar-inverse .nav > li > a,
.navbar-inverse .nav > li > a:hover,
.navbar-inverse .nav > li > a:focus {
  background-image: none;
  background-color: #774aa4;
  color: #e5d2f9;
  text-shadow: 0px 1px 1px rgba(0,0,0,.6);
}

.navbar-inverse .navbar-inner {
    padding-top: 16px;
    min-height: 35px;
    padding-bottom: 15px;
    border-bottom: #9565c6 solid 1px;
}

.navbar .nav>li>a, .navbar .nav>li>a:hover, .navbar .nav>li>a:focus {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    padding-bottom: 0;
}

#topmenu {
    text-align: right;
}

#topmenu .nav {
    float: none;
    display: inline;
}

#topmenu .nav > li {
    font-family: Helvetica, Arial, sans-serif;
    font-size: 16px;
    font-weight: bold;
    text-transform: uppercase;
}

#topmenu .nav > li > ul {
    text-align: left;
    text-transform: none;
    text-shadow: none;
}

.navbar .brand {
    padding: 0;
    padding-right: 5px;
}

h1, h2, h3 {
    font-family: 'Open Sans', sans-serif;
}

.nav.sidebar {
    margin-top: 90px;
    width: 220px;
}

.nav.sidebar .nav-header:first-child {
      border-radius: 4px 4px 0 0;
}

.nav.sidebar .nav-header {
  margin-top: 0;
  background-color: #9d6ebf;
    color: #fff;
    text-shadow: none;
}

h1#pagetitle {
    height: 40px;
    margin-top: 25px;
    margin-bottom: 25px;
    padding: 0;
    font-size: 30px;
}

.main > h2 {
    font-size: 28px;
}

.main > h3 {
    font-size: 24px;
}

#footer {
    text-align: center;
    margin-top: 24px;
    color: #909090;
}

.main > ol > li, .main > ul > li {
    margin-bottom: 6px;
}

.main > .nav-tabs > li {
    margin-bottom: -1px;
}

/* CorpWeb-style Buttons */

.navbar-inverse .nav li > a.flexbutton,
.navbar-inverse .nav li > a.blueflex {
	display: inline-block;
	margin: 0 6px;
	padding: 6px 18px;
	height: 24px;
	line-height: 24px;
	font-size: 16px;
	font-weight: bold;
	color: #fff;
	text-decoration: none;
	background: #9d6ebf;
	border: 1px solid #774aa4; /*#653f8c #543473*/

	-webkit-text-shadow: 0 1px 0 #3c2552;
	-moz-text-shadow: 0 1px 0 #3c2552;
	-ms-text-shadow: 0 1px 0 #3c2552;
	-o-text-shadow: 0 1px 0 #3c2552;
	text-shadow: 0 1px 0 #3c2552;
	
	-webkit-box-shadow: inset 0 1px 0 #ab8fc7, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-moz-box-shadow: inset 0 1px 0 #ab8fc7, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-ms-box-shadow: inset 0 1px 0 #ab8fc7, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-o-box-shadow: inset 0 1px 0 #ab8fc7, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	box-shadow: inset 0 1px 0 #ab8fc7, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);

	-webkit-border-radius: 18px;
	-moz-border-radius: 18px;
	-ms-border-radius: 18px;
	-o-border-radius: 18px;
	border-radius: 18px;
}

.navbar-inverse .nav li > a.flexbutton:hover {
	background: #aa7ad0;

	-webkit-box-shadow: inset 0 1px 0 #bba4d1, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-moz-box-shadow: inset 0 1px 0 #bba4d1, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-ms-box-shadow: inset 0 1px 0 #bba4d1, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-o-box-shadow: inset 0 1px 0 #bba4d1, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	box-shadow: inset 0 1px 0 #bba4d1, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
}

.navbar-inverse .nav li > a.blueflex {

	background: #5be;
	border-color: #39c;

	-webkit-text-shadow: 0 -1px 0 #4ad;
	-moz-text-shadow: 0 -1px 0 #4ad;
	-ms-text-shadow: 0 -1px 0 #4ad;
	-o-text-shadow: 0 -1px 0 #4ad;
	text-shadow: 0 -1px 0 #4ad;
	
	-webkit-box-shadow: inset 0 1px 0 #cde, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-moz-box-shadow: inset 0 1px 0 #cde, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-ms-box-shadow: inset 0 1px 0 #cde, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-o-box-shadow: inset 0 1px 0 #cde, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	box-shadow: inset 0 1px 0 #cde, 0 1px 2px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
}

.navbar-inverse .nav li > a.blueflex:hover {
	background: #6cf;

	-webkit-box-shadow: inset 0 1px 0 #def, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-moz-box-shadow: inset 0 1px 0 #def, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-ms-box-shadow: inset 0 1px 0 #def, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	-o-box-shadow: inset 0 1px 0 #def, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
	box-shadow: inset 0 1px 0 #def, 0 1px 3px #333, 0 0 0 6px rgba(0, 0, 0, 0.15);
}

#signin, #signup {
  float: right;
  padding-left: 5px;
}

/* Docs Home */
.big_number a {
   color:inherit;
   text-decoration:underline;
}
/* API PAGE STYLING */

.floating-header {
  background-color:rgba(255,255,255,0.6);
  width:100%;
}

.floating-header.affix {
  top:0px;
}

.floating-header.affix + .scrollable-api-docs {
   margin-top: 120px;
}

.api-page .floating-header .btn-toolbar {
  margin-bottom:0;
}

.api-page .language-buttons.btn-group {
  margin-left:50px;
  margin-bottom:0px;
}

.api-page h3 {
  text-transform:uppercase;
  margin-top:25px;
  padding-top:5px;
}

.api-page h4 {
  text-transform:uppercase;
  padding-top:10px;
  border-top:1px solid #efefef;
  margin-top:20px;
}

.api-page h5 {
  text-transform:uppercase;
  color:#666;
}

.api-left {
  height:100%;
}

.api-right {
  padding-left: 10px;
  padding-right:10px;
  padding-bottom:10px;
  background-color:rgba(32, 59, 117, 0.07);
  border:1px solid rgba(32, 59, 117, 0.29);
  border-radius:3px;
}

/* Only show python code blocks by default */
.api-page .code-block {
  display:none;
}

.api-page .code-block.code-block-python {
  visibility:visible;
  display:block;
}

.arguments {
  margin-left: 40px;
}

.arguments strong {
  /* FIXME - extend bootstrap code element */
  font-family:Monaco,Menlo,Consolas,"Courier New",monospace;
  padding:2px 4px;
  background-color:#F7F7F9;
  border:1px solid #E1E1E8;
  font-weight:normal;
  font-size:85%;
}

.arguments code {
  color: #333;
}

.arguments ul {
    list-style-type:disc;
}

.arguments li {
    padding:5px;
}


/* FAQ */

h3 a, h4 a    {color: black}
ol.outline    {list-style-type: upper-alpha}
ol.outline ol {list-style-type: decimal}
span.question {font-weight: bold}

